Closed
Bug 934514
Opened 12 years ago
Closed 12 years ago
Fennec crashes on KitKat
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox25 unaffected, firefox26+ verified, firefox27+ fixed, firefox28+ fixed, b2g-v1.2 fixed)
VERIFIED
FIXED
Firefox 28
People
(Reporter: snorp, Assigned: snorp)
References
Details
Attachments
(1 file)
|
1.43 KB,
patch
|
blassey
:
review+
cwiiis
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
On I believe beta and up, we're crashing at startup on Android 4.4 KitKat. I get the following in logcat:
W/System.err( 5546): java.lang.NoSuchFieldError: no field with name='mNativeSurface' signature='I' in class Landroid/view/Surface;
W/System.err( 5546): at org.mozilla.gecko.GeckoAppShell.nativeInit(Native Method)
W/System.err( 5546): at org.mozilla.gecko.GeckoAppShell.nativeInit(Native Method)
W/System.err( 5546): at org.mozilla.gecko.GeckoAppShell.runGecko(GeckoAppShell.java:315)
W/System.err( 5546): at org.mozilla.gecko.GeckoThread.run(GeckoThread.java:176)
| Assignee | ||
Comment 1•12 years ago
|
||
We had a heads up about this problem from Google and implemented a fix, but some other changes busted that. Patch coming.
| Assignee | ||
Comment 2•12 years ago
|
||
Actually I think that message is a red herring, the exception should be getting handled fine. And we crash at 0x0, not 0xdeaddood, so I don't think it's a JVM abort. Digging.
| Assignee | ||
Comment 3•12 years ago
|
||
Ah, I thought the MOZ_CRASH() wouldn't do anything on a release build, but that's apparently not the case. Boo.
| Assignee | ||
Updated•12 years ago
|
status-firefox26:
--- → affected
status-firefox27:
--- → affected
status-firefox28:
--- → affected
tracking-firefox26:
--- → ?
tracking-firefox27:
--- → ?
tracking-firefox28:
--- → ?
Updated•12 years ago
|
status-firefox25:
--- → unaffected
| Assignee | ||
Comment 4•12 years ago
|
||
Attachment #826820 -
Flags: review?(blassey.bugs)
| Assignee | ||
Comment 5•12 years ago
|
||
AndroidBridge::GetFieldID() (which is what getField calls) aborts on failure, so we never made it to the code that I had added for KLP (now KitKat). The patch just avoids a lookup that is known to fail.
| Assignee | ||
Comment 6•12 years ago
|
||
Comment on attachment 826820 [details] [diff] [review]
Don't access for non-existant field on Android 4.4
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Android 4.4 release
User impact if declined: Crash on startup
Testing completed (on m-c, etc.): local only so far
Risk to taking this patch (and alternatives if risky): low risk
String or IDL/UUID changes made by this patch: none
Attachment #826820 -
Flags: approval-mozilla-beta?
Attachment #826820 -
Flags: approval-mozilla-aurora?
Comment 7•12 years ago
|
||
Comment on attachment 826820 [details] [diff] [review]
Don't access for non-existant field on Android 4.4
Just adding my r+ for expedience - this is pretty benign and we need to fix this asap I think.
Attachment #826820 -
Flags: review+
Updated•12 years ago
|
Attachment #826820 -
Flags: review?(blassey.bugs) → review+
Comment 8•12 years ago
|
||
Verified the fix works on a Nexus 5 running out-of-the-box images.
Updated•12 years ago
|
Comment 9•12 years ago
|
||
Let's get this on central & confirm builds are green so we can uplift to branches - will hold the Fennec 26 beta 2 go to build for this.
| Assignee | ||
Comment 10•12 years ago
|
||
Updated•12 years ago
|
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 28
Updated•12 years ago
|
Attachment #826820 -
Flags: approval-mozilla-beta?
Attachment #826820 -
Flags: approval-mozilla-beta+
Attachment #826820 -
Flags: approval-mozilla-aurora?
Attachment #826820 -
Flags: approval-mozilla-aurora+
Comment 12•12 years ago
|
||
Looking good on central https://tbpl.mozilla.org/?rev=fadc8a168bbc
| Assignee | ||
Comment 13•12 years ago
|
||
Comment 14•12 years ago
|
||
status-b2g-v1.2:
--- → fixed
Comment 17•12 years ago
|
||
Verified fix on 26 beta 2. beta starts up correctly on Android 4.4, Nexus 5 device.
Updated•12 years ago
|
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•