Bug 934514 - Don't access non-existant field on Android 4.4 r=blassey a=lsblakk

--HG--
extra : rebase_source : 989a8bb0010096ba0950ccaa96d7e642dd1d2883